--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rufsan Hossain Santo</title>
+    <title>Peter Parker Website</title>
 
     <!-- css files -->
     <link rel="stylesheet" href="css/style.css" />
@@ -14,19 +14,53 @@
 </head>
 
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
             <h1>Welcome To</h1>
-            <h1><span class="name-highlight">Rufsan's</span> World</h1>
+            <h1><span class="orange-highlight">Peter Perker's</span> World</h1>
             <h3>World Class Professional Web Developer</h3>
             <p>
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat quae reiciendis explicabo inventore, laborum ex labore officiis, debitis non consequatur quaerat earum quia perspiciatis dolorum blanditiis possimus, assumenda tenetur neque!
             </p>
+            <a href="#" class="link-button" target="_blank">HIRE ME</a>
         </div>
         <div class="half-width">
-            <img src="images/jhankar.png" alt="" />
+            <img src="images/jhankar.png" alt="profile photo" />
         </div>
     </section>
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="profile photo" />
+        </div>
+        <div class="half-width">
+            <h2>Dream Big</h2>
+            <h3>Become World's No. 1 Developer</h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et eaque itaque unde blanditiis laboriosam perferendis aut, ratione natus aliquid incidunt fugiat nihil id inventore voluptate, sed corrupti accusamus, quae autem.
+            </p>
+            <a href="#" class="link-button" target="_blank">DOWNLOAD RESUME</a>
+        </div>
+    </section>
+    <section class="experience-area">
+        <h2>Experiences</h2>
+        <div class="half-width single-experience" id="full-stack">
+            <h2>Full Stack Web Developer</h2>
+            <h3 class="orange-highlight">2021 - Present | Pro level Web Dev</h3>
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit deserunt dicta veritatis totam provident iste, culpa dolor nesciunt quas possimus incidunt necessitatibus numquam explicabo ad vitae quam. Aut, nemo minima?
+            </p>
+        </div>
+        <div class="half-width single-experience" id="baby-dev">
+            <h2>Baby Web Developer</h2>
+            <h3 class="orange-highlight">2020 - 2021 | Pro level Web Dev</h3>
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit deserunt dicta veritatis totam provident iste, culpa dolor nesciunt quas possimus incidunt necessitatibus numquam explicabo ad vitae quam. Aut, nemo minima?
+            </p>
+        </div>
+    </section>
+    <footer>
+        <small>&#169; Peter Parker, 2021. All rights reserved.</small>
+    </footer>
 </body>
 
 </html>
